--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.85.5",
     "apisauce": "^3.2.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
