--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/query-async-storage-persister": "^5.87.1",
     "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-persist-client": "^5.87.1",
     "apisauce": "^3.2.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
