--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^4.0.17",
-    "expo-secure-store": "~14.2.4"
+    "expo-secure-store": "~14.2.4",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
